# pinocchio_tutorial

./: CMakeLists.txt  load_model.cpp
